Fix footer spacing on narrow devices

--- a/_sass/_page-footer.scss
+++ b/_sass/_page-footer.scss
@@ -1,5 +1,5 @@
 .page-footer {
     border-top: 1px solid $color-secondary;
     margin-top: 48px;
-    padding: 24px 0;
+    padding-top: 24px;
 }
